# eurocopa

./: altura.py  analise.ipynb  idades.py  main.py  pe_dominante.py  pyproject.toml  referencia.md
SQL/: geral.sql
